--- a/index.html
+++ b/index.html
@@ -311,7 +311,7 @@
       </div>
       <div class="ot2">
         <div class="text2">
-        <img src="2.png" alt="">
+        <img src="/assets/2.png" alt="">
             
             <p style="
             text-align: center
@@ -328,7 +328,7 @@
         </div>
       </div>
       <div class="ot3">
-        <img src="3.png" alt="">
+        <img src="/assets/3.png" alt="">
           <p style="text-align: center;">UI UX Design</p>
           <p style="text-align: center;">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
           <button style="
