--- a/index.html
+++ b/index.html
@@ -274,6 +274,7 @@
     <!-- penutup section text -->
 
     <!-- Our Valuable Services -->
+    <div class="badan2"></div>
     <div class="our">
       <a href="#nav" class="ot" id="2">Our Valuable Services</a>
       <div class="ot1">
@@ -339,7 +340,77 @@
           margin-left: 35%;
           margin-top: 33%;"><a href="#nav" style="color: #FFFFFF;"> READ MORE </a></button> 
       </div>
+      
     </div>
     <!-- penutup Our Valuable Services -->
+    <!-- Bagian marcel-->
+    <div class="badan">
+      <div class="bagian_tengah">
+        <h2 class="title_middle">Our Work</h2>
+        <div class="card1">
+          <div class="backgroud_c1">
+            <img
+              class="gambarc1"
+              src="assets/750a668acb27b3b3e43920f048abdb79.png"
+              alt=""
+            />
+          </div>
+          <div class="textc1">
+            <h4 style="text-align: left;">Brand Name</h4>
+            <h6 style="text-align: left ;">iOS | ANDROID | WEB DEVELOPMENT</h6>
+            <p style="text-align: left ;">
+              Lorem ipsum, dolor sit amet consectetur adipisicing elit. Eum
+              velit molestiae assumenda hic aut perspiciatis architecto iste
+              expedita ex id. Reprehenderit cum velit delectus deserunt eos
+              blanditiis numquam similique accusantium!
+            </p>
+          </div>
+        </div>
+        <br />
+        <br />
+        <br />
+        <div class="card2">
+          <div class="textc2">
+            <h4 style="text-align: right">Brand Name</h4>
+            <h6 style="text-align: right">iOS | ANDROID | WEB DEVELOPMENT</h6>
+            <p style="text-align: right">
+              Lorem ipsum, dolor sit amet consectetur adipisicing elit. Eum
+              velit molestiae assumenda hic aut perspiciatis architecto iste
+              expedita ex id. Reprehenderit cum velit delectus deserunt eos
+              blanditiis numquam similique accusantium!
+            </p>
+          </div>
+          <div class="backgroud_c2">
+            <img
+              class="gambarc2"
+              src="assets/c0c00b754d55ec077dc0ae3585593fe0.png"
+              alt=""
+            />
+          </div>
+        </div>
+        <br />
+        <br />
+        <br />
+        <div class="card3">
+          <div class="backgroud_c3">
+            <img
+              class="gambarc3"
+              src="assets/c274c37232d02e9f1e79be13a07f9589.png"
+              alt=""
+            />
+          </div>
+          <div class="textc3">
+            <h4 style="text-align: left;">Brand Name</h4>
+            <h6 style="text-align: left;">iOS | ANDROID | WEB DEVELOPMENT</h6>
+            <p style="text-align: left;">
+              Lorem ipsum, dolor sit amet consectetur adipisicing elit. Eum
+              velit molestiae assumenda hic aut perspiciatis architecto iste
+              expedita ex id. Reprehenderit cum velit delectus deserunt eos
+              blanditiis numquam similique accusantium!
+            </p>
+          </div>
+        </div>
+      </div>
+    </div>
 </body>
 </html>
