--- a/index.html
+++ b/index.html
@@ -410,6 +410,28 @@
             </p>
           </div>
         </div>
+        <br>
+        <br>
+        <br>
+        <div class="card4">
+          <div class="textc4">
+            <h4 style="text-align: right">Brand Name</h4>
+            <h6 style="text-align: right">iOS | ANDROID | WEB DEVELOPMENT</h6>
+            <p style="text-align: right">
+              Lorem ipsum, dolor sit amet consectetur adipisicing elit. Eum
+              velit molestiae assumenda hic aut perspiciatis architecto iste
+              expedita ex id. Reprehenderit cum velit delectus deserunt eos
+              blanditiis numquam similique accusantium!
+            </p>
+          </div>
+          <div class="backgroud_c4">
+            <img
+              class="gambarc4"
+              src="assets/5178f572be165d5381e285aecdaa9b7a.png"
+              alt=""
+            />
+          </div>
+        </div>
       </div>
     </div>
 </body>
