--- a/index.html
+++ b/index.html
@@ -431,8 +431,149 @@
               alt=""
             />
           </div>
+          <div class="d-grid gap-2 col-6 mx-auto" style="height: 40px;
+      width: 140px;
+      background: linear-gradient(270deg, #8C32F0 0%, #E73587 100%);
+      ">
+        <button class="btn btn-primary" type="button">SEE ALL WORK</button>
+      </div>
         </div>
       </div>
     </div>
+    <section class="footer">
+      <footer class="bg-white text-black">
+        <div class="container p-4">
+          <div class="row">
+            <div class="col-lg-6 col-md-12 mb-4 mb-md-0">
+              <h5
+                class="text-capitalize"
+                style="font-size: 30px; line-height: 38px; color: #020e35"
+              >
+                Question, Comment, Concerns ?
+              </h5>
+              <h3 style="font-size: 70px; line-height: 110px; color: #020e35">
+                We'd love to <span style="color: #e73587">hear </span> from you!
+              </h3>
+            </div>
+            <div class="col-lg-3 col-md-6 mb-4 mb-md-0">
+              <div class="mb-3">
+                <label
+                  for="email"
+                  class="form-label"
+                  style="font-size: 16px; line-height: 22px; color: #2c3241"
+                  >Your Email Address</label
+                >
+                <input
+                  type="email"
+                  class="form-control"
+                  id="email"
+                  placeholder="something@website.com"
+                  style="
+                    height: 48px;
+                    width: 554px;
+                    left: 0px;
+                    top: 30px;
+                    border-radius: 0px;
+                    background: #ffffff;
+                    border: 1px solid rgba(0, 0, 0, 0.2);
+                    box-shadow: inset 0px 1px 0px rgba(255, 255, 255, 0.1);
+                    border-radius: 2px;
+                  "
+                />
+              </div>
+              <div class="mb-3">
+                <label
+                  for="subject"
+                  class="form-label"
+                  style="
+                    font-family: 'WorkSans';
+                    font-size: 16px;
+                    font-weight: bold;
+                    line-height: 22px;
+                    color: #2c3241;
+                  "
+                  >Subject</label
+                >
+                <input
+                  type="text"
+                  class="form-control"
+                  id="subject"
+                  placeholder="Question about your article"
+                  style="
+                    height: 48px;
+                    width: 554px;
+                    left: 0px;
+                    top: 30px;
+                    border-radius: 0px;
+                    background: #ffffff;
+                    border: 1px solid rgba(0, 0, 0, 0.2);
+                    box-shadow: inset 0px 1px 0px rgba(255, 255, 255, 0.1);
+                    border-radius: 2px;
+                    font-weight: bold;
+                  "
+                />
+              </div>
+              <div class="mb-3">
+                <label
+                  for="message"
+                  class="form-label"
+                  style="font-size: 16px; line-height: 22px; color: #2c3241"
+                  >Message</label
+                >
+                <textarea
+                  class="form-control"
+                  id="message"
+                  placeholder="Your message start with..."
+                  rows="3"
+                  style="
+                    height: 168px;
+                    width: 554px;
+                    left: 0px;
+                    top: 30px;
+                    border-radius: 0px;
+                    background: #ffffff;
+                    border: 1px solid rgba(0, 0, 0, 0.2);
+                    box-shadow: inset 0px 1px 0px rgba(255, 255, 255, 0.1);
+                    border-radius: 2px;
+                  "
+                ></textarea>
+              </div>
+              <div class="d-grid gap-2">
+                <button
+                  class="btn btn-primary"
+                  type="button"
+                  style="
+                    height: 48px;
+                    width: 554px;
+                    left: 752px;
+                    top: 4389px;
+                    border-radius: 0px;
+                    background: linear-gradient(
+                      270deg,
+                      #8c32f0 0%,
+                      #e73587 100%
+                    );
+                  "
+                >
+                  Send a Message
+                </button>
+              </div>
+            </div>
+          </div>
+        </div>
+        <!-- Copyright -->
+        <div
+          class="p-3 text-white"
+          style="
+            background-color: #020e35;
+            font-weight: bold;
+            font-size: 12px;
+            line-height: 15px;
+          "
+        >
+          2020 © All rights reserved by Your company name
+        </div>
+      </footer>
+    </section>
 </body>
 </html>
