--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@
 <body>
     <!-- Kelompok 6 Final Project 3 -->
 
+    <!-- bagian Ainul -->
+
     <!-- section header -->
     <div class="header">
       <nav class="navbar navbar-expand-lg bg-light">
@@ -36,10 +38,10 @@
                 <a class="nav-link active" href="#2">SERVICE</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link active" href="#">PORTOFOLIO</a>
+                <a class="nav-link active" href="#3">PORTOFOLIO</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link active" href="#">CONTACT US</a>
+                <a class="nav-link active" href="#4">CONTACT US</a>
               </li>
             </ul>
           </div>
@@ -261,7 +263,7 @@
     </div>
     <!-- penutup section border -->
 
-    <!-- section text -->
+    <!-- section About -->
     <div class="about">
       <a href="#nav" class="ab" id="1">About Us</a>
       <a class="ac">
@@ -312,8 +314,7 @@
       </div>
       <div class="ot2">
         <div class="text2">
-        <img src="/assets/2.png" alt="">
-            
+        <img src="assets/2.png" alt="">
             <p style="
             text-align: center
             ;">Web Development</p>
@@ -329,7 +330,7 @@
         </div>
       </div>
       <div class="ot3">
-        <img src="/assets/3.png" alt="">
+        <img src="assets/3.png" alt="">
           <p style="text-align: center;">UI UX Design</p>
           <p style="text-align: center;">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
           <button style="
@@ -343,10 +344,12 @@
       
     </div>
     <!-- penutup Our Valuable Services -->
+
+
     <!-- Bagian marcel-->
     <div class="badan">
       <div class="bagian_tengah">
-        <h2 class="title_middle">Our Work</h2>
+        <h2 class="title_middle" id="3">Our Work</h2>
         <div class="card1">
           <div class="backgroud_c1">
             <img
@@ -440,7 +443,11 @@
         </div>
       </div>
     </div>
+
+
+    <!-- bagian Bintang -->
     <section class="footer">
+      <div class="bawah">
       <footer class="bg-white text-black">
         <div class="container p-4">
           <div class="row">
@@ -574,6 +581,7 @@
           2020 © All rights reserved by Your company name
         </div>
       </footer>
+      </div>
     </section>
 </body>
 </html>
