--- a/index.html
+++ b/index.html
@@ -446,7 +446,7 @@
 
 
     <!-- bagian Bintang -->
-    <section class="footer">
+    <section class="footer" id="4">
       <div class="bawah">
       <footer class="bg-white text-black">
         <div class="container p-4">
