--- a/index.html
+++ b/index.html
@@ -446,8 +446,8 @@
 
 
     <!-- bagian Bintang -->
-    <section class="footer" id="4">
-      <div class="bawah">
+    <section class="footer">
+      <div class="bawah" id="4">
       <footer class="bg-white text-black">
         <div class="container p-4">
           <div class="row">
