--- a/index.html
+++ b/index.html
@@ -454,15 +454,31 @@
             <div class="col-lg-6 col-md-12 mb-4 mb-md-0">
               <h5
                 class="text-capitalize"
-                style="font-size: 30px; line-height: 38px; color: #020e35"
-              >
+                style="position: absolute;
+                width: 584px;
+                height: 38px;
+                top: 3941px;
+                font-size: 30px;
+                line-height: 38px;
+                color: #020E35;
+              ">
                 Question, Comment, Concerns ?
               </h5>
-              <h3 style="font-size: 70px; line-height: 110px; color: #020e35">
+              <h3 style="position: absolute;
+              width: 584px;
+              height: 220px;
+              top: 3971px;
+              font-size: 80px;
+              line-height: 110px;
+              color: #020E35;">
                 We'd love to <span style="color: #e73587">hear </span> from you!
               </h3>
             </div>
-            <div class="col-lg-3 col-md-6 mb-4 mb-md-0">
+            <div class="col-lg-3 col-md-6 mb-4 mb-md-0" style="position: absolute;
+            width: 554px;
+            height: 496px;
+            left: 752px;
+            top: 3941px;">
               <div class="mb-3">
                 <label
                   for="email"
@@ -545,37 +561,46 @@
                   "
                 ></textarea>
               </div>
-              <div class="d-grid gap-2">
-                <button
-                  class="btn btn-primary"
-                  type="button"
-                  style="
-                    height: 48px;
-                    width: 554px;
-                    left: 752px;
-                    top: 4389px;
-                    border-radius: 0px;
-                    background: linear-gradient(
-                      270deg,
-                      #8c32f0 0%,
-                      #e73587 100%
-                    );
-                  "
-                >
-                  Send a Message
-                </button>
-              </div>
             </div>
+
+                <div class="d-grid gap-2">
+                  <button
+                    class="btn btn-primary"
+                    type="button"
+                    style="
+                      height: 48px;
+                      width: 554px;
+                      left: 752px;
+                      top: 4389px;
+                      border-radius: 0px;
+                      background: linear-gradient(
+                        270deg,
+                        #8c32f0 0%,
+                        #e73587 100%
+                      );
+                    "
+                  >
+                    Send a Message
+                  </button>
+                </div>
           </div>
         </div>
         <!-- Copyright -->
         <div
           class="p-3 text-white"
           style="
-            background-color: #020e35;
-            font-weight: bold;
-            font-size: 12px;
-            line-height: 15px;
+          position: absolute;
+          width: 1440px;
+          height: 25px;
+          left: 0px;
+          top: 4531px;
+          background: #020E35;
+          font-weight: bold;
+          font-size: 12px;
+          color: #FFFFFF;
+          font-size: 12px;
+          line-height: 15px;
+          color: #FFFFFF;
           "
         >
           2020 © All rights reserved by Your company name
