--- a/index.html
+++ b/index.html
@@ -447,12 +447,12 @@
 
     <!-- bagian Bintang -->
     <section class="footer">
-      <div class="bawah" id="4">
+      <div class="bawah">
       <footer class="bg-white text-black">
         <div class="container p-4">
           <div class="row">
             <div class="col-lg-6 col-md-12 mb-4 mb-md-0">
-              <h5
+              <h5 id="4"
                 class="text-capitalize"
                 style="position: absolute;
                 width: 584px;
